--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
     
         <div class="container-fluid p-0">
     
-          <section class="resume-section p-3 p-lg-5 d-flex d-column" id="about">
+          <section class="resume-section p-3 p-lg-5 d-flex d-column Text-center" id="about">
             <div class="my-auto">
-              <h1 class="mb-0">NICOLAS
-                <span class="text-primary">RIOS CASTILLO</span>
+              <h1 class="mb-0">Julian Felipe 
+                <span class="text-primary">Tapias Parra</span>
               </h1>
               <div class="subheading mb-5">
               </div>
